fixed bug where canvas was not showing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 #game {
   box-shadow: 10px 10px 14px black;
-  width: 700px;
-  height: 600px;
+
 }
 h1 {
   text-align: center;
